k8s/database-bridge.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: database-bridge
spec:
  selector:
    matchLabels:
      app: database-bridge
  template:
    metadata:
      labels:
        app: database-bridge
    spec:
      containers:
      - name: database-bridge
        image: database-bridge
        imagePullPolicy: Never
        resources:
          limits:
            memory: "512Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: database-bridge-service
spec:
  selector:
    app: database-bridge
  clusterIP: 10.97.0.1
  ports:
  - port: 8080
    targetPort: 8080
