k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myingress
  labels:
    name: myingress
spec:
  rules:
  - http:
      paths:
      - pathType: Prefix
        path: "/database-bridge"
        backend:
          service:
            name: database-bridge
            port: 
              number: 8080
